20250227 - Perform basic arithmetic operations , Allow multi-digit number input , Display the result in the TextView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="zero">0</string>
     <string name="equal">=</string>
     <string name="add">+</string>
+    <string name="error">Error</string>
 </resources>
